--- a/docker_container/DC01/Vagrantfile
+++ b/docker_container/DC01/Vagrantfile
@@ -27,6 +27,9 @@ Vagrant.configure("2") do |config|
         sudo usermod -a -G docker vagrant
         docker run -it -d -p 8080:80 --name web-server httpd
         docker cp /vagrant/htdocs web-server:/usr/local/apache2/htdocs
+        docker pull nginx
+        docker run -it -d -p 8080:80 --name nginx-server nginx
+        docker exec -it nginx-server /bin/bash
       SCRIPT
     end
   end
