--- a/docker_container/DC01/Vagrantfile
+++ b/docker_container/DC01/Vagrantfile
@@ -11,6 +11,7 @@ Vagrant.configure("2") do |config|
         vb.memory = 8192
       end
       ubuntu.vm.network "forwarded_port", guest: 8080, host: 80
+      ubuntu.vm.network "forwarded_port", guest: 8081, host: 81
       ubuntu.vm.network "private_network", ip: "192.168.33.10"
       ubuntu.vm.provision "shell", inline: <<-SCRIPT
         sudo apt-get update -y
@@ -26,11 +27,9 @@ Vagrant.configure("2") do |config|
         sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
         sudo usermod -a -G docker vagrant
         docker run -it -d -p 8080:80 --name web-server httpd
+        docker run -it -d -p 8081:80 --name nginx-server nginx
         docker cp /vagrant/htdocs web-server:/usr/local/apache2/htdocs
-        docker pull nginx
-        docker run -it -d -p 8080:80 --name nginx-server nginx
-        docker exec -it nginx-server /bin/bash
-        docker cp /vagrant/htdocs nginx-server:/usr/share/nginx/html
+        docker cp /vagrant/html nginx-server:/usr/share/nginx/html
       SCRIPT
     end
   end
