--- a/docker_container/DC01/Vagrantfile
+++ b/docker_container/DC01/Vagrantfile
@@ -30,8 +30,8 @@ Vagrant.configure("2") do |config|
         docker pull nginx
         docker run -it -d -p 8080:80 --name web-server httpd
         docker run -it -d -p 8081:80 --name nginx-server nginx
-        docker cp /vagrant/htdocs web-server:/usr/local/apache2/htdocs
-        docker cp /vagrant/html nginx-server:/usr/share/nginx/html
+        docker cp /vagrant/htdocs/. web-server:/usr/local/apache2/htdocs
+        docker cp /vagrant/html/. nginx-server:/usr/share/nginx/html
       SCRIPT
     end
   end
