--- a/docker_container/DC01/Vagrantfile
+++ b/docker_container/DC01/Vagrantfile
@@ -26,6 +26,7 @@ Vagrant.configure("2") do |config|
         sudo apt-get update -y
         sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
         sudo usermod -a -G docker vagrant
+        docker login -u JoChanHo --password dckr_pat_Pvn_51jC_2x2yrXsVDEUo1Ue6P8
         docker pull httpd
         docker pull nginx
         docker run -it -d -p 8080:80 --name web-server httpd
