--- a/docker_container/DC01/Vagrantfile
+++ b/docker_container/DC01/Vagrantfile
@@ -30,6 +30,9 @@ Vagrant.configure("2") do |config|
         docker volume create --label service=web --label creater=jo  web_src_vol
         sudo cp -r /vagrant/htdocs/*  /var/lib/docker/volumes/web_src_vol/_data/
         docker run -d -p 8080:80 -v web_src_vol:/usr/local/apache2/htdocs --name web-server1 httpd
+        docker volume create --label service=nginx --label creater=jo  nginx_src_vol
+        sudo cp -r /vagrant/html/*  /var/lib/docker/volumes/nginx_src_vol/_data/
+        docker run -d -p 8081:80 -v nginx_src_vol:/usr/share/nginx/html --name nginx-server nginx
       SCRIPT
     end
   end
