--- a/docker_container/DC02/Vagrantfile
+++ b/docker_container/DC02/Vagrantfile
@@ -13,6 +13,7 @@ Vagrant.configure("2") do |config|
       sshfs.vm.network "private_network",ip: "192.168.33.250"
       sshfs.vm.provision "shell", inline: <<-SCRIPT
         sudo useradd -m -s /bin/bash sshfs
+        docker login -u jochanho --password < /vagrant/env/
         echo sshfs:qwerasdf | sudo chpasswd
         git clone https://github.com/devlukej/static-web-template.git
         sudo mkdir /home/sshfs/htdocs
@@ -30,8 +31,7 @@ Vagrant.configure("2") do |config|
         vb.cpus = 4
         vb.memory = 8192
       end
-      ubuntu.vm.network "forwarded_port", guest: 8080, host: 80
-      ubuntu.vm.network "forwarded_port", guest: 8081, host: 81
+      ubuntu.vm.network "forwarded_port", guest: 80, host: 80
       ubuntu.vm.network "private_network", ip: "192.168.33.200"
       ubuntu.vm.provision "shell", inline: <<-SCRIPT
         sudo apt-get update -y
