--- a/docker_container/DC02/Vagrantfile
+++ b/docker_container/DC02/Vagrantfile
@@ -43,7 +43,7 @@ Vagrant.configure("2") do |config|
           "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
           "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
           sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-        sudo apt-get update -yWW
+        sudo apt-get update -y
         sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
         sudo usermod -a -G docker vagrant
         docker login -u jochanho --password < /vagrant/env/
