--- a/docker_container/DC04/Vagrantfile
+++ b/docker_container/DC04/Vagrantfile
@@ -4,46 +4,44 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
 
-  config.vm.define "ubuntu1" do |ubuntu1|
-    ubuntu1.vm.hostname = "mz-server1"
-    ubuntu1.vm.provider "virtualbox" do |vb|
-    vb.name = "ubuntu-server1"
+  config.vm.define "gw" do |gw|
+    gw.vm.hostname = "gateway"
+    gw.vm.provider "virtualbox" do |vb|
+    vb.name = "gateway"
     vb.cpus = 2
     vb.memory = 2048
     end
-    ubuntu1.vm.network "public_network"
-    ubuntu1.vm.network "private_network", ip: "192.168.0.2"
+    gw.vm.network "public_network"
+    gw.vm.network "private_network", ip: "192.168.33.254"
 
-    ubuntu1.vm.provision "shell", inline: <<-SCRIPT
-      sudo ip route del default via 10.0.2.2 dev enp0s3
+    gw.vm.provision "shell", inline: <<-SCRIPT
     SCRIPT
   end
 
-  config.vm.define "ubuntu2" do |ubuntu2|
-    ubuntu2.vm.hostname = "mz-server2"
-    ubuntu2.vm.provider "virtualbox" do |vb|
-    vb.name = "ubuntu-server2"
+  config.vm.define "web1" do |web1|
+    web1.vm.hostname = "web-server1"
+    web1.vm.provider "virtualbox" do |vb|
+    vb.name = "nginx-server"
     vb.cpus = 2
     vb.memory = 2048
     end
-    ubuntu2.vm.network "private_network", ip: "192.168.0.3"
+    web1.vm.network "private_network", ip: "192.168.33.10"
 
-    ubuntu2.vm.provision "shell", inline: <<-SCRIPT
-    sudo ip route del default via 10.0.2.2 dev enp0s3
+
+    web1.vm.provision "shell", inline: <<-SCRIPT
   SCRIPT
   end
 
-  config.vm.define "ubuntu3" do |ubuntu3|
-    ubuntu3.vm.hostname = "mz-server3"
-    ubuntu3.vm.provider "virtualbox" do |vb|
-    vb.name = "ubuntu-server3"
+  config.vm.define "web2" do |web2|
+    web2.vm.hostname = "web-server2"
+    web2.vm.provider "virtualbox" do |vb|
+    vb.name = "apache-server"
     vb.cpus = 2
     vb.memory = 2048
     end
-    ubuntu3.vm.network "private_network", ip: "192.168.0.4"
+    web2.vm.network "private_network", ip: "192.168.33.20"
 
-    ubuntu3.vm.provision "shell", inline: <<-SCRIPT
-      sudo ip route del default via 10.0.2.2 dev enp0s3
+    web2.vm.provision "shell", inline: <<-SCRIPT
     SCRIPT
   end
 
