--- a/docker_container/DC04/Vagrantfile
+++ b/docker_container/DC04/Vagrantfile
@@ -11,8 +11,8 @@ Vagrant.configure("2") do |config|
     vb.cpus = 2
     vb.memory = 2048
     end
-    gw.vm.network "public_network"
-    gw.vm.network "private_network", ip: "192.168.33.254"
+    gw.vm.network "public_network" #DHCP
+    gw.vm.network "private_network", ip: "192.168.123.254", virtualbox__intnet: true
 
     gw.vm.provision "shell", inline: <<-SCRIPT
     SCRIPT
@@ -25,10 +25,11 @@ Vagrant.configure("2") do |config|
     vb.cpus = 2
     vb.memory = 2048
     end
-    web1.vm.network "private_network", ip: "192.168.33.10"
+    web1.vm.network "private_network", ip: "192.168.223.10", virtualbox__intnet: true
 
 
     web1.vm.provision "shell", inline: <<-SCRIPT
+    sudo apt-get update -y && sudo apt-get install nginx -y
   SCRIPT
   end
 
@@ -39,9 +40,26 @@ Vagrant.configure("2") do |config|
     vb.cpus = 2
     vb.memory = 2048
     end
-    web2.vm.network "private_network", ip: "192.168.33.20"
+    web2.vm.network "private_network", ip: "192.168.223.20", virtualbox__intnet: true
 
     web2.vm.provision "shell", inline: <<-SCRIPT
+    sudo apt-get update -y && sudo apt-get install apache2 -y
+    SCRIPT
+  end
+
+  config.vm.define "lb" do |lb|
+    lb.vm.hostname = "lb"
+    lb.vm.provider "virtualbox" do |vb|
+    vb.name = "lb"
+    vb.cpus = 2
+    vb.memory = 2048
+    end
+    # ubuntu 20.04 의 인터페이스 명 -> enp0s8
+    lb.vm.network "private_network", ip: "192.168.123.10", virtualbox__intnet: true
+    # ubuntu 20.04 의 인터페이스 명 -> enp0s9
+    lb.vm.network "private_network", ip: "192.168.223.1", virtualbox__intnet: true
+
+    lb.vm.provision "shell", inline: <<-SCRIPT
     SCRIPT
   end
 
