--- a/docker_container/DC05/kube_yaml/01_single_pod.yaml
+++ b/docker_container/DC05/kube_yaml/01_single_pod.yaml
@@ -22,3 +22,31 @@ spec:
     - containerPort: 80
   imagePullSecrets:
   - name: docker-pull-secret
+
+#분리 ---
+---
+
+apiVersion: v1
+kind: Pod
+metadata:
+  name: pod-name2
+  labels:
+    name: pod-name
+    creator: Jo
+    version: "1"
+    date: "2023-07-25"
+    year: "2023"
+    month: "07"
+    day: "25"
+spec:
+  containers:
+  - name: apache-container
+    image: httpd:latest
+    resources:
+      limits:
+        memory: "128Mi"
+        cpu: "250m"
+    ports:
+      - containerPort: 80
+  imagePullSecrets:
+  - name: docker-pull-secret
