--- a/docker_container/DC05/kube_yaml/01_single_pod.yaml
+++ b/docker_container/DC05/kube_yaml/01_single_pod.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: myapp
+  name: pod-name1
   labels:
-    name: pod-name
+    name: pod-name1
     creator: Jo
     version: "1"
     date: "2023-07-25"
@@ -12,7 +12,7 @@ metadata:
     day: "25"
 spec:
   containers:
-  - name: container-name
+  - name: nginx-container
     image: nginx:latest
     resources:
       limits:
@@ -31,7 +31,7 @@ kind: Pod
 metadata:
   name: pod-name2
   labels:
-    name: pod-name
+    name: pod-name2
     creator: Jo
     version: "1"
     date: "2023-07-25"
