--- a/docker_container/DC05/kube_yaml/01_single_pod.yaml
+++ b/docker_container/DC05/kube_yaml/01_single_pod.yaml
@@ -16,5 +16,15 @@ spec:
         cpu: "250m"
     ports:
     - containerPort: 80
+  - name: alpine-container
+    image: alpine:latest
+    args:
+    - /bin/sh
+    - -c
+    - "while true; do echo 'running'; sleep 10; done"
+    resources:
+      limits:
+        memory: "256Mi"
+        cpu: "500m"
   imagePullSecrets:
   - name: docker-pull-secret
