--- a/docker_container/DC05/kube_yaml/01_single_pod.yaml
+++ b/docker_container/DC05/kube_yaml/01_single_pod.yaml
@@ -16,7 +16,7 @@ spec:
         cpu: "250m"
     ports:
     - containerPort: 80
-  - name: alpine-container
+  - name: alpine
     image: alpine:latest
     args:
     - /bin/sh
