--- a/docker_container/DC05/kube_yaml/05_service_clusterip.yaml
+++ b/docker_container/DC05/kube_yaml/05_service_clusterip.yaml
@@ -19,6 +19,7 @@ metadata:
   name: nginx-pod
   labels:
     name: nginx-pod
+    app: web
 spec:
   containers:
   - name: nginx
@@ -40,6 +41,7 @@ metadata:
   name: httpd-pod
   labels:
     name: httpd-pod
+    app: web
 spec:
   containers:
   - name: httpd
