--- a/docker_container/DC05/Vagrantfile
+++ b/docker_container/DC05/Vagrantfile
@@ -32,4 +32,14 @@ Vagrant.configure("2") do |config|
         end
         wn2.vm.network "private_network", ip: "192.168.10.13"
     end
+
+    config.vm.define "dock" do |dock|
+        dock.vm.hostname = "docker-registry"
+        dock.vm.provider "virtualbox" do |vb|
+            vb.name = "docker-registry"
+            vb.cpus = 4
+            vb.memory = 4096
+        end
+        dock.vm.network "private_network", ip: "192.168.10.14"
+    end
 end
