--- a/docker_container/DC05/Vagrantfile
+++ b/docker_container/DC05/Vagrantfile
@@ -41,5 +41,6 @@ Vagrant.configure("2") do |config|
             vb.memory = 4096
         end
         dock.vm.network "private_network", ip: "192.168.10.14"
+        dock.vm.network "public_network"
     end
 end
