--- a/docker_container/DC05/kube_yaml/deploy/service_nodeport.yaml
+++ b/docker_container/DC05/kube_yaml/deploy/service_nodeport.yaml
@@ -11,3 +11,19 @@ spec:
   - port: 80
     targetPort: 80
     protocol: TCP
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: service-httpd
+spec:
+  type: NodePort
+  selector:
+    app: static-web
+    server: httpd
+  ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
