--- a/docker_container/DC05/kube_yaml/service_account/01_role_binding.yaml
+++ b/docker_container/DC05/kube_yaml/service_account/01_role_binding.yaml
@@ -6,12 +6,12 @@ metadata:
 
 #계정
 subjects:
-- apiGroups: ""
+- apiGroup: ""
   kind: ServiceAccount
   name: user1
 
 #권한
 roleRef:
-  apiGroup: rbac.authorization.k8s.io/v1
+  apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: user1-role
