--- a/docker_container/PROJECT-1/Vagrantfile
+++ b/docker_container/PROJECT-1/Vagrantfile
@@ -4,9 +4,9 @@
 Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/focal64"
     config.vm.define "dock" do |dock|
-        dock.vm.hostname = "docker-registry"
+        dock.vm.hostname = "docker"
         dock.vm.provider "virtualbox" do |vb|
-            vb.name = "docker-registry"
+            vb.name = "docker"
             vb.cpus = 4
             vb.memory = 8192
         end
