--- a/docker_container/PROJECT-1/Vagrantfile
+++ b/docker_container/PROJECT-1/Vagrantfile
@@ -3,6 +3,7 @@
 
 Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/focal64"
+
     config.vm.define "dock" do |dock|
         dock.vm.hostname = "docker"
         dock.vm.provider "virtualbox" do |vb|
@@ -10,8 +11,10 @@ Vagrant.configure("2") do |config|
             vb.cpus = 4
             vb.memory = 8192
         end
-        dock.vm.network "private_network", ip: "192.168.10.11"
+        dock.vm.network "private_network", ip: "192.168.10.12"
         dock.vm.network "public_network"
+        dock.vm.provision "shell", inline: <<-SCRIPT
+      SCRIPT
     end
 
     config.vm.define "spring" do |spring|
@@ -21,7 +24,8 @@ Vagrant.configure("2") do |config|
             vb.cpus = 4
             vb.memory = 8192
         end
-        spring.vm.network "private_network", ip: "192.168.10.12"
+        spring.vm.network "private_network", ip: "192.168.10.13"
         spring.vm.network "public_network"
     end
+
 end
