--- a/docker_container/PROJECT-1/Vagrantfile
+++ b/docker_container/PROJECT-1/Vagrantfile
@@ -29,7 +29,8 @@ Vagrant.configure("2") do |config|
         ssh-keygen -t rsa -f /home/jenkins/.ssh/id_rsa -P ''
         docker run --name spring-server -itd -p 9000:9000 -p 9022:22 jochanho/spring-server:latest
         sudo docker cp /home/jenkins/.ssh/id_rsa.pub spring-server:/home/spring/.ssh/authorized_keys
-        
+        cat /home/jenkins/.ssh/id_rsa
+        cat /home/jenkins/.ssh/id_rsa_pub
         SCRIPT
     end
 
